--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Address:</strong>
-  <%= @field.address %>
+  <strong>Street:</strong>
+  <%= @field.street %>
 </p>
 
 <p>
@@ -13,6 +13,16 @@
 <p>
   <strong>Country:</strong>
   <%= @field.country %>
+</p>
+
+<p>
+  <strong>Latitude:</strong>
+  <%= @field.latitude %>
+</p>
+
+<p>
+  <strong>Longitude:</strong>
+  <%= @field.longitude %>
 </p>
 
 
