--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
+    <%= f.label :street %><br />
+    <%= f.text_field :street %>
   </div>
   <div class="field">
     <%= f.label :city %><br />
