--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -25,6 +25,8 @@
   <%= @field.longitude %>
 </p>
 
+<%= gmaps4rails(@json) %>
+
 
 <%= link_to 'Edit', edit_field_path(@field) %> |
 <%= link_to 'Back', fields_path %>
