--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @field %> |
-<%= link_to 'Back', fields_path %>
+<%= link_to 'Show', @field, 'data-no-turbolink' => true %> |
+<%= link_to 'Back', fields_path, 'data-no-turbolink' => true %>
