--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -29,4 +29,4 @@
 
 
 <%= link_to 'Edit', edit_field_path(@field) %> |
-<%= link_to 'Back', fields_path %>
+<%= link_to 'Back', fields_path, 'data-no-turbolink' => true %>
