--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Salam World!</h1>
 
-<p><%= link_to "Spots", fields_url%></p>
+<p><%= link_to "Spots", fields_url, 'data-no-turbolink' => true %></p>
